# LibreOffice-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
extension/: Addons.xcu  Jobs.xcu  build.sh  description.xml
extension/pythonpath/: lo_mcp_extension.py
src/lo_mcp/: http_client.py  server.py
tests/: test_writer_roundtrip.py
